# study-tracker

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts  router.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: CategoryCard.vue  DailyQuestCard.vue  DailyQuestConfig.vue  PixelButton.vue  PixelProgress.vue
src/lib/: daily.ts  date.ts  storage.ts  time.ts  types.ts  useAppState.ts
src/views/: HomeView.vue  QuestView.vue
