[package]
name = "study-tracker"
version = "0.1.0"
description = "Pixel quest timer with category leveling."
authors = ["you"]
license = "MIT"
repository = ""
default-run = "study-tracker"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
